# aftgraphs

./: .gitignore  .gitmodules  Cargo.toml  TODO  addsimulation.sh  buildwasm.sh  flake.nix  index.html  rmsimulation.sh  rust-toolchain.toml  serve.json  serve.sh
.github/workflows/: main.yml
aftgraphs-macros/: Cargo.toml
aftgraphs-macros/src/: lib.rs
aftgraphs_macros/: Cargo.toml
aftgraphs_macros/src/: lib.rs
imgui-wgpu/: Cargo.toml
imgui-wgpu/examples/: cube.rs  custom-texture.rs  hello-world.rs
particles/: Cargo.toml
particles/res/: input.toml  particles.toml  particles.wgsl
particles/src/: lib.rs  main.rs  physics.rs
res/: common.js  index.html  worker.js
src/: app.rs  cli.rs  display.rs  headless.rs  input.rs  lib.rs  linux.rs  primitives.rs  render.rs  simulation.rs  ui.rs  uniform.rs  vertex.rs  wasm.rs
src/input/: linux.rs  wasm.rs
src/render/: builder.rs  linux.rs  wasm.rs
src/simulation/: builder.rs  encoder.rs  linux.rs  wasm.rs
src/ui/: linux.rs  wasm.rs
src/uniform/: builder.rs
src/vertex/: builder.rs
triangle/: Cargo.toml
triangle/res/: input.toml  triangle.toml  triangle.wgsl
triangle/src/: lib.rs  main.rs
