[workspace]
members = [ "aftgraphs-macros", "particles","triangle" ]
exclude = [ "imgui-rs", "imgui-wgpu" ]

[package]
name = "aftgraphs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["x264"]

[dependencies]
anyhow = "1.0"
async-rwlock = "1.3"
async-mutex = "1.4"
bytemuck = { version = "1.14", features=["derive"] }
copypasta = "0.10"
current_platform = "0.2"
futures-intrusive = "0.5"
lazy_static = "1.4"
log = "0.4"
num-traits = "0.2"
serde = { version="1.0", features=["derive"] }
smallvec = "1.13"
toml = "0.8"
web-time = "1.0"
wgpu = { version="0.18", default-features=false, features=["webgl", "spirv", "trace", "wgsl"] }
winit = { version="0.29.3", features=["rwh_05", "wayland", "x11", "serde"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
clap = { version="4.5", features=["derive", "cargo"] }
crossbeam = "0.8.4"
dcv-color-primitives = "0.6"
env_logger = "0.10"
pollster = "0.3"
imgui = { path="./imgui-rs/imgui" }
imgui-wgpu = { path="./imgui-wgpu" }
imgui-winit-support = { path="./imgui-rs/imgui-winit-support" }
x264 = { git="https://github.com/rust-av/x264-rs/", optional=true }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
test-case = "3.3"

[target.'cfg(not(target_family = "wasm"))'.dependencies.winit]
version = "0.29.3"
features = ["rwh_05", "wayland", "x11"]

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1"
console_log = { version="0.2", features=["color"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version="0.3", features = [
  "Document",
  "DomRect",
  "Element",
  "HtmlElement",
  "HtmlFormElement",
  "HtmlInputElement",
  "HtmlLabelElement",
  "HtmlFieldSetElement",
  "HtmlLegendElement",
  "HtmlCanvasElement",
  "EventTarget",
  "PointerEvent",
  "Node",
  "WebGl2RenderingContext",
  "WebGlActiveInfo",
  "WebGlBuffer",
  "WebGlContextAttributes",
  "WebGlContextEvent",
  "WebGlContextEventInit",
  "WebGlFramebuffer",
  "WebGlPowerPreference",
  "WebGlProgram",
  "WebGlQuery",
  "WebGlRenderbuffer",
  "WebGlRenderingContext",
  "WebGlSampler",
  "WebGlShader",
  "WebGlShaderPrecisionFormat",
  "WebGlSync",
  "WebGlTexture",
  "WebGlTransformFeedback",
  "WebGlUniformLocation",
  "WebGlVertexArrayObject",
] }

[profile.dev]
opt-level = 2

[profile.release]
lto = true

[profile.web-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
panic = "abort"
codegen-units = 1
