[workspace]
members = ["aftgraphs-macros", "particles", "triangle"]
exclude = ["imgui-rs", "imgui-wgpu", "imgui-winit-support"]

[workspace.dependencies]
async-std = "1.12"
crossbeam = "0.8.4"
js-sys = "0.3"
log = "0.4"
wayland-backend = "=0.3.7"
wasm-bindgen = "=0.2.95"
wasm-bindgen-futures = "=0.4.45"
web-sys = { version="0.3.72", features = [
  "Document",
  "DomRect",
  "Element",
  "HtmlElement",
  "HtmlFormElement",
  "HtmlInputElement",
  "HtmlLabelElement",
  "HtmlFieldSetElement",
  "HtmlLegendElement",
  "HtmlCanvasElement",
  "EventTarget",
  "PointerEvent",
  "Node",
  "WebGl2RenderingContext",
  "WebGlActiveInfo",
  "WebGlBuffer",
  "WebGlContextAttributes",
  "WebGlContextEvent",
  "WebGlContextEventInit",
  "WebGlFramebuffer",
  "WebGlPowerPreference",
  "WebGlProgram",
  "WebGlQuery",
  "WebGlRenderbuffer",
  "WebGlRenderingContext",
  "WebGlSampler",
  "WebGlShader",
  "WebGlShaderPrecisionFormat",
  "WebGlSync",
  "WebGlTexture",
  "WebGlTransformFeedback",
  "WebGlUniformLocation",
  "WebGlVertexArrayObject",
  "Worker",
  "WorkerOptions",
  "WorkerType",
  "MessageEvent",
]}
web-time = "1.0"
wgpu = { version = "23.0", default-features = false, features = ["webgl", "spirv", "wgsl"]}
winit = { version = "=0.30.5", features = ["serde"] }

[package]
name = "aftgraphs"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["x264"]

[dependencies]
async-std = { workspace = true }
bytemuck = { version = "1.14", features = ["derive"] }
copypasta = "0.10"
crossbeam = "0.8.4"
futures-intrusive = "0.5"
lazy_static = "1.4"
log = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
smallvec = "1.13"
thiserror = "1.0.57"
toml = "0.8"
web-time = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
compiler_builtins = "0.1.134"
dcv-color-primitives = "0.6"
env_logger = "0.10"
pollster = "0.3"
imgui = "=0.12.0"
imgui-wgpu = "=0.25.0"
imgui-winit-support = "=0.13.0"
x264 = { git = "https://github.com/rust-av/x264-rs/", optional = true }

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
test-case = "3.3"

[target.'cfg(target_family = "wasm")'.dependencies]
anyhow = "1.0"
console_error_panic_hook = "0.1"
console_log = { version = "0.2", features = ["color"] }
js-sys = "0.3"
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true  }

[patch.crates-io]
imgui = { path = "./imgui-rs/imgui" }
imgui-sys = { path = "./imgui-rs/imgui-sys" }
imgui-wgpu = { path = "./imgui-wgpu" }
imgui-winit-support = { path = "./imgui-winit-support" }

[patch."https://github.com/imgui-rs/imgui-rs"]
imgui = { path = "./imgui-rs/imgui" }
imgui-sys = { path = "./imgui-rs/imgui-sys" }

[profile.dev]
opt-level = 1

[profile.release]
lto = true

[profile.web-release]
inherits = "release"
strip = "debuginfo"
panic = "abort"
codegen-units = 1
