[package]
name = "particles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

aftgraphs = { path="../" }
aftgraphs-macros = { path="../aftgraphs-macros" }
winit = { version = "0.29.3", features=["rwh_05", "wayland", "x11"] }
wgpu = { version="0.18", features=["webgl", "spirv"] }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "WebGl2RenderingContext",
  "WebGlActiveInfo",
  "WebGlBuffer",
  "WebGlContextAttributes",
  "WebGlContextEvent",
  "WebGlContextEventInit",
  "WebGlFramebuffer",
  "WebGlPowerPreference",
  "WebGlProgram",
  "WebGlQuery",
  "WebGlRenderbuffer",
  "WebGlRenderingContext",
  "WebGlSampler",
  "WebGlShader",
  "WebGlShaderPrecisionFormat",
  "WebGlSync",
  "WebGlTexture",
  "WebGlTransformFeedback",
  "WebGlUniformLocation",
  "WebGlVertexArrayObject",
] }

[lib]  
crate-type = ["cdylib", "rlib"]

