[package]
name = "particles"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aftgraphs = { path = "../" }
aftgraphs-macros = { path = "../aftgraphs-macros" }
async-std = "1.12"
bacon-sci = "0.16.0"
log = "0.4"
rand = "0.8"
web-time = "1.0.0"
wgpu = { version = "0.18", features = ["webgl", "spirv"] }
winit = { version = "0.29.3", features = ["rwh_05", "wayland", "x11"] }

[target.'cfg(target_family = "wasm")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "WebGl2RenderingContext",
  "WebGlActiveInfo",
  "WebGlBuffer",
  "WebGlContextAttributes",
  "WebGlContextEvent",
  "WebGlContextEventInit",
  "WebGlFramebuffer",
  "WebGlPowerPreference",
  "WebGlProgram",
  "WebGlQuery",
  "WebGlRenderbuffer",
  "WebGlRenderingContext",
  "WebGlSampler",
  "WebGlShader",
  "WebGlShaderPrecisionFormat",
  "WebGlSync",
  "WebGlTexture",
  "WebGlTransformFeedback",
  "WebGlUniformLocation",
  "WebGlVertexArrayObject",
] }

[lib]  
crate-type = ["cdylib", "rlib"]

