[package]
name = "particles"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aftgraphs = { path = "../" }
aftgraphs-macros = { path = "../aftgraphs-macros" }
async-std = { workspace = true }
bacon-sci = "0.16.0"
crossbeam = { workspace = true }
log = { workspace = true }
rand = "0.8"
web-time = { workspace = true }
wgpu = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
wayland-backend = { workspace = true }
winit = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }

[lib]  
crate-type = ["cdylib", "rlib"]

