[package]
name = "triangle"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aftgraphs = { path = "../" }
aftgraphs-macros = { path = "../aftgraphs-macros" }
wgpu = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
wayland-backend = { workspace = true }
winit = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
